2010-07-20  Gavin Peters  <gavinp@chromium.org>

Reviewed by Adam Barth.

        prefetch categorization is exactly wrong
        https://bugs.webkit.org/show_bug.cgi?id=42651

        The miscategorization caused onloads to issue early, so you see x,
        y as 0, 0 in the buggy version.

        * fast/dom/HTMLLinkElement/onload-completion-test-expected.txt: Added.
        * fast/dom/HTMLLinkElement/onload-completion-test.html: Added.
        * fast/dom/HTMLLinkElement/resources: Added.
        * fast/dom/HTMLLinkElement/resources/nick.jpg: Added.
2010-07-20  Gavin Peters  <gavinp@chromium.org>

        Reviewed by Adam Barth.

        prefetch categorization is exactly wrong
        https://bugs.webkit.org/show_bug.cgi?id=42651

        While I was in the area, I saw that CachedResource::schedule() was dead, so I have removed it.

        Test: fast/dom/HTMLLinkElement/onload-completion-test.html

        * loader/CachedCSSStyleSheet.h:
        * loader/CachedFont.h:
        * loader/CachedImage.h:
        * loader/CachedResource.cpp:
        * loader/CachedResource.h:
        (WebCore::CachedResource::isPrefetch):
        * loader/CachedScript.h:
        * loader/CachedXBLDocument.h:
        * loader/CachedXSLStyleSheet.h:

Canonical link: https://commits.webkit.org/54629@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63792 268f45cc-cd09-0410-ab3c-d52691b4dbfc