WebCore/loader/CachedScript.h
@@ -48,8 +48,6 @@ namespace WebCore {
         virtual void data(PassRefPtr<SharedBuffer> data, bool allDataReceived);
         virtual void error();
 
-        virtual bool schedule() const { return false; }
-
         void checkNotify();
 
         virtual void destroyDecodedData();
